bk_ida/gccida/g1/build_unary_op
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3191:23: error: must use 'enum' tag to refer to type 'tree_code'
tree  build_unary_op( tree_code code, tree xarg, int flag) 
                      ^
                      enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3198:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3200:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3201:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3202:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3204:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3209:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // r14 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3210:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3227:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v40; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3229:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v42; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3235:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v48; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3236:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v49; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3239:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v52; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3486:20: error: expected expression
v23 = ( tree_node *)*( &global_trees + 12); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3486:9: error: use of undeclared identifier 'tree_node'
v23 = ( tree_node *)*( &global_trees + 12); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3570:16: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
v37 = build( ( tree_code)( 59 - ( ( ( ( code - 130) & 0xFFFFFFFD) == 0) - 1)), v22, v36, v24); 
               ^~~~~~~~~
               tree_cons
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/c-typeck.c:3570:77: error: too few arguments to function call, expected 3, have 1
v37 = build( ( tree_code)( 59 - ( ( ( ( code - 130) & 0xFFFFFFFD) == 0) - 1)), v22, v36, v24); 
             ~~~~~~~~~~~~                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/tree.h:2477:1: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/build_unary_op/src/obj/c-typeck.o] Error 1
